# LANClaw

./: .gitignore  Cargo.toml  LANClaw-设计文档-v1.0-2026-06-14.md  README.md  README_CN.md  b.txt  config.example.json  lanclaw.service
plan/: v1.0-2026-06-14.md  v1.0-2026-06-15.md  v1.0-2026-06-16.md  v1.0-2026-06-18.md  v1.0-2026-06-19.md  v1.0-2026-06-21.md  v1.0-2026-06-22.md  v1.0-2026-06-23.md  v1.0-2026-06-25.md  v1.0-2026-06-26.md
src/: config.rs  main.rs  models.rs  pi_bridge.rs  router.rs  rpc_client.rs  scheduler.rs  skill_gen.rs
src/network/: discovery.rs  file.rs  messaging.rs  mod.rs
